--- a/June/今日やったこと0621.md
+++ b/June/今日やったこと0621.md
@@ -7,5 +7,5 @@
 - 警告メッセージつける
 
 # 感想
-- 一日置きにTIL投稿するのが日課になってしまったｗ
+- 次の日にTIL投稿するのが日課になってしまったｗ
 - [動くWebデザイン帳](https://coco-factory.jp/ugokuweb/)がとても便利！！
